--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,16 +7,12 @@ jobs:
       - image: circleci/golang:1.15.8
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - go-mod-v4-{{ checksum "go.sum" }}
       - run:
           name: Install Dependencies
           command: go mod download
-      - save_cache:
-          key: go-mod-v4-{{ checksum "go.sum" }}
-          paths:
-            - "/go/pkg/mod"
+      - run:
+          name: Ignore WASM
+          command: rm -rf wasm
       - run:
           name: Run tests
           command: |
