--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 jobs:
-  build:
+  test:
     working_directory: ~/repo
     docker:
       - image: circleci/golang:1.15.8
@@ -20,3 +20,53 @@ jobs:
             gotestsum --junitfile /tmp/test-reports/unit-tests.xml
       - store_test_results:
           path: /tmp/test-reports
+  build-wasm:
+    working_directory: ~/repo/wasm
+    docker:
+      - image: circleci/golang:1.15.8
+    steps:
+      - checkout
+      - run:
+          name: Install Dependencies
+          command: go mod download
+      - run:
+          name: Build WASM
+          command: GOOS=js GOARCH=wasm go build -o imgpro.wasm
+      - persist_to_workspace:
+          root: wasm
+          paths: pages
+  docs-deploy:
+    # refs: https://circleci.com/blog/deploying-documentation-to-github-pages-with-continuous-integration/
+    docker:
+      - image: node:8.10.0
+    steps:
+      - checkout
+      - attach_workspace:
+          at: wasm
+      - run:
+          name: Install and configure dependencies
+          command: |
+            npm install -g --silent gh-pages@2.0.1
+            git config user.email "ci-pages-build@iam.gy"
+            git config user.name "ci-build"
+      - add_ssh_keys:
+          fingerprints:
+            - "0c:5c:59:d8:9b:48:36:12:cb:18:b5:fe:10:b6:46:34"
+      - run:
+          name: Deploy docs to gh-pages branch
+          command: gh-pages --dotfiles --message "[skip ci] Updates" --dist wasm/pages
+
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - test
+      - build-wasm
+      - docs-deploy:
+          requires:
+            - test
+            - build-wasm
+          filters:
+            branches:
+              only: main
