docs: auto build wasm

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - store_test_results:
           path: /tmp/test-reports
   build-wasm:
-    working_directory: ~/repo/wasm
+    working_directory: ~/repo
     docker:
       - image: circleci/golang:1.15.8
     steps:
@@ -31,10 +31,10 @@ jobs:
           command: go mod download
       - run:
           name: Build WASM
-          command: GOOS=js GOARCH=wasm go build -o imgpro.wasm
+          command: cd wasm && GOOS=js GOARCH=wasm go build -o imgpro.wasm
       - run:
           name: WASM Exec Script
-          command: cp "$(go env GOROOT)/misc/wasm/wasm_exec.js" .
+          command: cd wasm && cp "$(go env GOROOT)/misc/wasm/wasm_exec.js" .
       - persist_to_workspace:
           root: wasm
           paths:
